[workspace]
members = ["crates/*", "crates/wdrf-macros/wdrf-proc-macros"]
resolver = "2"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[workspace.package]
edition = "2021"
repository = "https://github.com/CotCatalin15/windows-driver-rust-framework"
#readme = ""
#license = ""


[workspace.dependencies]
#Wdk driver crates
wdk-sys = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }
wdk-build = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }
wdk = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }
wdk-macros = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }
wdk-alloc = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }
wdk-panic = { git = "https://github.com/CotCatalin15/windows-drivers-rs", version = "0.2.0", branch = "features/minifilter-build" }

#Error crates
anyhow = { version = "1.0.35", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

hashbrown = { version = "0.14.3", default-features = false, features = [
    "inline-more",
    "ahash",
    "allocator-api2",
] } #Container crates

#Required for hashbrown 
allocator-api2 = { version = "0.2.18", default-features = false }
#ahash = { version = "0.8.11", default-features = false }

wchar = "0.11.0"

#Local crates
wdrf = { path = "crates/wdrf", version = "0.1.0" }
wdrf-macros = { path = "crates/wdrf-macros", version = "0.1.0" }
wdrf-std = { path = "crates/wdrf-std", version = "0.1.0" }
