[package]
name = "test-driver"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
windows-sys.workspace = true

wdrf-std.workspace = true
wdrf = { path = "../wdrf", version = "0.1.0", features = ["minifilter"] }
anyhow.workspace = true
widestring.workspace = true
maple.workspace = true
nt-string.workspace = true

[build-dependencies]
wdk-build = { version = "0.2.0" }


[lib]
crate-type = ["cdylib"]

[package.metadata.wdk]
