[package]
name = "test-driver"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
windows-sys.workspace = true

wdrf-std.workspace = true
wdrf = { path = "../wdrf", version = "0.1.0", features = [
    "minifilter",
    "debug-checks",
] }
anyhow.workspace = true
widestring.workspace = true
maple.workspace = true
nt-string.workspace = true

[build-dependencies]
wdk-build = { git = "https://github.com/microsoft/windows-drivers-rs", version = "0.2.0" }

[lib]
crate-type = ["cdylib"]

[features]
default = ["wdrf-std/sanity-checks"]

[package.metadata.wdk]
