[package]
name = "test-driver"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
windows-sys.workspace = true

#wdrf-std.workspace = true
#wdrf = { path = "../wdrf", version = "0.1.0", features = [
#    "minifilter",
#    "debug-checks",
#] }
#maple.workspace = true
#widestring.workspace = true
#nt-string.workspace = true

anyhow.workspace = true

[build-dependencies]
wdk-build = "0.4.0"

[lib]
crate-type = ["cdylib"]

#[features]
#default = ["wdrf-std/sanity-checks"]

[package.metadata.wdk.driver-model]
driver-type = "WDM"
