[package]
name = "wdrf-std"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
windows-sys.workspace = true
wdrf-macros.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hashbrown.workspace = true
allocator-api2.workspace = true
widestring.workspace = true
#ahash.workspace = true
sealed.workspace = true
bitflags.workspace = true

nt-string.workspace = true

[features]
default = ["dev-features"]

dev-features = ["sanity-checks"]

sanity-checks = ["alloc-sanity", "irql-checks"]
irql-checks = []
alloc-sanity = []
