[package]
name = "wdrf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
#readme = ""
#license = ""

[dependencies]
wdrf-std.workspace = true
wdk-sys.workspace = true
anyhow.workspace = true
wdk.workspace = true
derive_builder.workspace = true
widestring.workspace = true
maple.workspace = true

[dev-dependencies]
wdk-sys = { git = "https://github.com/CotCatalin15/windows-drivers-rs", branch = "features/minifilter-build", features = [
    "test-stubs",
] }

[features]
default = []
