[package]
name = "wdrf"
version = "0.1.0"
edition = "2021"
repository.workspace = true
#readme = ""
#license = ""

[dependencies]
#wdk-sys.workspace = true
#wdk.workspace = true
windows-sys.workspace = true
wdrf-std.workspace = true
anyhow.workspace = true
derive_builder.workspace = true
widestring.workspace = true
maple.workspace = true
nt-string.workspace = true

[dev-dependencies]
#wdk-sys = { git = "https://github.com/CotCatalin15/windows-drivers-rs", branch = "features/minifilter-build", features = [
#    "test-stubs",
#] }

[features]
default = ["minifilter"]
minifilter = []
